--- a/K-means Clustering Algorithm/K-means Clustering Algorithm.csproj
+++ b/K-means Clustering Algorithm/K-means Clustering Algorithm.csproj
@@ -50,7 +50,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IDrawable.cs" />
     <Compile Include="K_Means.cs" />
+    <Compile Include="Painter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
